# ClawSwarm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  lint.yml  secret-scan.yml
claw_swarm/: __init__.py  agent_runner.py  cli.py  gateway.py  main.py  memory.py  prompts.py  replier.py  tools.py
claw_swarm/agent/: __init__.py  main.py  worker_agents.py
claw_swarm/gateway/: __init__.py  __main__.py  schema.py  server.py
claw_swarm/gateway/adapters/: base.py  discord_adapter.py  telegram_adapter.py  whatsapp_adapter.py
claw_swarm/gateway/proto/: messaging_gateway.proto  messaging_gateway_pb2.py
claw_swarm/tools/: __init__.py  file_executor.py  launch_tokens.py  tools_registry.py
tests/: __init__.py  conftest.py  test_agent_main.py  test_agent_runner.py  test_cli.py  test_gateway_adapters_base.py  test_gateway_schema.py  test_gateway_server.py  test_memory.py  test_prompts.py  test_replier.py  test_tools_launch_tokens.py
